# remote-binary

./: .gitignore  README.md  remote-binary.cabal  stack.yaml
Control/Remote/Monad/: Binary.hs
Control/Remote/Monad/Binary/: Types.hs
example/: Client.hs  Main.hs  Original.hs  Server.hs  Types.hs  remote-binary-example.cabal  remote-binary.cabal
remote-transport/: remote-transport.cabal
remote-transport/Control/Remote/Monad/: Transport.hs
remote-transport/example/: Main.hs
