name:                remote-binary
version:             0.1
synopsis:            Remote Monad implementation using the binary package 
description:                
                     
license:             BSD3
license-file:        LICENSE
author:              Justin Dawson and Andy Gill
maintainer:          JDawson@ku.edu
copyright:           (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-binary

library
  exposed-modules:     Control.Remote.Monad.Binary

  other-modules:
                       Control.Remote.Monad.Binary.Types

  build-depends:       base                   >= 4    && < 5
                     , binary                 >= 0.7  && < 0.9
                     , bytestring             >= 0.10 && < 0.11
                     , natural-transformation >= 0.3.1 && < 0.4
                     , remote-monad           == 0.3
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall


--Test-Suite test-spec
--  type:       exitcode-stdio-1.0
--  hs-source-dirs: tests/spec
--  main-is:    Spec.hs
--  build-depends:   aeson                  >= 0.8 && < 0.12
--                 , attoparsec             >= 0.13 && < 0.14
--                 , base                   >= 4 && < 5
--                 , bytestring             >= 0.10 && < 0.11
--                 , natural-transformation >= 0.3.1 && < 0.4
--                 , remote-json            >= 0.2 && < 0.3
--                 , text                   >= 1.2 && < 1.3
--
--  default-language:    Haskell2010
--  ghc-options:         -Wall
--
--
--Test-Suite test-example
--  type:       exitcode-stdio-1.0
--  hs-source-dirs: remote-json-test
--  main-is:    Unit.hs
--  build-depends:    aeson                  >= 0.8 && < 0.12
--                  , base                   >= 4 && < 5
--                  , natural-transformation >= 0.3.1 && < 0.4
--                  , random                 >= 1.1 && < 1.2
--                  , remote-json            >= 0.2 && < 0.3
--                  , scientific             >= 0.3 && < 0.4
--                  , text                   >= 1.2 && < 1.3
--
--  default-language:    Haskell2010
--  ghc-options:         -Wall
--
--Test-Suite front-example
--  type:       exitcode-stdio-1.0
--  hs-source-dirs: front
--  main-is:    Main.hs
--  build-depends:    aeson                  >= 0.8 && < 0.12
--                  , base                   >= 4 && < 5
--                  , natural-transformation >= 0.3.1 && < 0.4
--                  , remote-json            >= 0.2 && < 0.3
--                  , text                   >= 1.2 && < 1.3
--
--  default-language:    Haskell2010
--  ghc-options:         -Wall
--
--
--test-suite remote-json-properties
--  type:                exitcode-stdio-1.0
--  main-is:             Test.hs
--  build-depends:       aeson                  >= 0.8 && < 0.12
--                     , base                   >= 4.7 && < 5
--                     , containers             >= 0.1 && < 0.6
--                     , natural-transformation >= 0.3.1 && < 0.4
--                     , remote-json            >= 0.2 && < 0.3
--                     , QuickCheck             == 2.8.*
--                     , quickcheck-instances   >= 0.1 && < 0.4
--                     , tasty                  >= 0.8 && < 0.12
--                     , tasty-quickcheck       >= 0.8 && < 0.9
--  hs-source-dirs:      tests/qc
--  default-language:    Haskell2010
--  ghc-options:         -Wall

