name:                remote-binary
version:             0.1.1
synopsis:            Remote Monad implementation using the binary package
description:

license:             BSD3
license-file:        LICENSE
author:              Justin Dawson and Andy Gill
maintainer:          JDawson@ku.edu
copyright:           (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-binary

library
  exposed-modules:     Control.Remote.Monad.Binary

  other-modules:
                       Control.Remote.Monad.Binary.Types

  build-depends:       base                   >= 4    && < 5
                     , binary                 >= 0.7  && < 0.9
                     , bytestring             >= 0.10 && < 0.11
                     , natural-transformation >= 0.4  && < 0.5
                     , remote-monad           == 0.3
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall

Test-Suite remote-binary-example
  type:                exitcode-stdio-1.0
  hs-source-dirs:      example
  main-is:             Main.hs
  build-depends:       base                   >= 4    && < 5
                     , binary                 >= 0.7  && < 0.9
                     , bytestring             >= 0.10 && < 0.11
                     , mtl                    >= 2.2  && < 2.3
                     , natural-transformation >= 0.4  && < 0.5
                     , network                >= 2.6  && < 2.7
                     , remote-monad           == 0.3
                     , remote-binary          == 0.1.1
                     , stm                    >= 2.4  && < 2.5
  default-language:    Haskell2010
  ghc-options:         -Wall -threaded
