name:                remote-transport
version:             0.1
synopsis:            Transporting binary representations of monadic computations.
description:                
                     
license:             BSD3
license-file:        LICENSE
author:              Justin Dawson and Andy Gill
maintainer:          JDawson@ku.edu
copyright:           (c) 2016 The University of Kansas
category:            Network
build-type:          Simple
extra-source-files:  README.md
tested-with:         GHC == 7.10.3
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/ku-fpg/remote-binary

library
  exposed-modules:     Control.Remote.Monad.Transport


  build-depends:       base                   >= 4    && < 5
                     , binary                 >= 0.7  && < 0.9
                     , bytestring             >= 0.10 && < 0.11
                     , natural-transformation >= 0.3.1 && < 0.4
                     , network-transport      >= 0.4   && < 0.5
                     , remote-binary	      == 0.1
                     , stm                    == 2.4.*
  hs-source-dirs:      .
  default-language:    Haskell2010
  ghc-options:         -Wall


--
--
--Test-Suite remote-transport-example
--  type:       exitcode-stdio-1.0
--  hs-source-dirs: example
--  main-is:    Driver.hs
--  build-depends:    aeson                  >= 0.8 && < 0.12
--                  , base                   >= 4 && < 5
--                  , natural-transformation >= 0.3.1 && < 0.4
--                  , random                 >= 1.1 && < 1.2
--                  , remote-json            >= 0.2 && < 0.3
--                  , scientific             >= 0.3 && < 0.4
--                  , text                   >= 1.2 && < 1.3
--
--  default-language:    Haskell2010
--  ghc-options:         -Wall
--
